# cognitive-semi-groups-b2bf-claude

./: .resource_finder_complete  README.md  REPORT.md  definitions.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  main_results.tex  preliminaries.tex
paper_search_results/: chain_of_thought_prompting_formal_algebraic_structure_reasoning_LLM_20260309_222729.jsonl  contraction_mapping_idempotent_semigroup_Banach_fixed_point_20260309_223028.jsonl  prompt_composition_LLM_operator_algebra_transformation_20260309_223210.jsonl  semigroup_operator_composition_fixed_point_convergence_metric_space_20260309_222635.jsonl
papers/: README.md
papers/pages/: badea2025_transfinite_iteration_operator_transforms_manifest.txt  castin2023_mathematical_perspective_transformers_manifest.txt  chen2025_theoretical_foundations_prompt_engineering_manifest.txt  delMoral2025_contraction_sinkhorn_semigroups_manifest.txt  gerlach2017_convergence_positive_operator_semigroups_manifest.txt  gluck2018_asymptotics_operator_semigroups_manifest.txt  (+1 more)
results/: symbolic_verification.json  verification_results.json
src/: semigroup_verification.py  symbolic_proofs.py  visualizations.py
