[project]
name = "research-workspace"
version = "0.1.0"
description = "Mathematics research workspace"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
